# InternProj2025

./: README.md  ReadMe.md  last_tle_fetch.txt  main.py  matched_filter.py  sattelite_tles.pkl  up_down_link.py
Basic_Sim/: Plotter.py  Receiver.py  Sig_Gen_Noise.py  data_dict.pkl  rep_to_rx.pkl
Basic_Sim/archive/: first_prototype.py  main.py
Basic_Sim/experimental_files/: bytes.txt  exp_pysdr_rtlsdr.py  message_experimentation.py
Cesium_Sattelite/: .kobe_channel_correction_fork.py.swp  2024-001A.txt  Cesium_experimentation.py  Channel.py  Parametric_Sweep_Notes  Parametric_Sweep_Notes.txt  RRC_sig.py  ReadME  Receiver.py  Sig_Gen.py  TLE POEM-3  binary_search_caf.py  cesium_getting_started.html  channel_correction copy.py  channel_correction.py  channel_correction_copy.py  config.py  convert_tle.py  costa_optimization.py  costa_optimization_coarse_caf_fine.py  get_TLE.py  kobe_channel_correction_CAF.py  kobe_channel_correction_fork.py  last_tle_fetch.txt  package.json  parametric_sweep.py  satellite_parser.py  sats.czml  sattelite_tles.pkl  sattelite_tles.txt  test.py  test12213234234.py  viewer.html  viewer.py  xposat.czml
Experimentation/Basic_Sim/: Sig_Gen.py  zmq_repeater.py
Experimentation/Basic_Sim/GNU_Radio/gr-customModule/python/customModule/bindings/: CMakeLists.txt  corSymIn_python.cc  python_bindings.cc
Experimentation/hardware/: Detector_copy.py  RT_receiver.py  ReadMe  channel_correction.py  channel_correction_hardware.py  receive_processing.py  (+2 more)
Final_Product/: Channel.py  RT_channel_correction.py  RT_receiver.py  ReadME.md  Sig_Gen.py  backend.py  binary_search_caf.py  config.py  gen_iq.py  get_TLE.py  html_head.html  key  key.pub  last_tle_fetch.txt  main.py  package-lock.json  required_pip_install.txt  sats.czml  transmit.bash  transmit_processing.py  zmq_test.py
GNU_Radio/gr-Correlator/python/Correlator/bindings/: CMakeLists.txt
Gui/: gui_practice.py  main.py
Phys_Sim/: .Receiver.py.swp  Add_Noise.py  Channel_Model.py  Gui_zmq_controlled.py  Plotter.py  Receiver.py  Repeater.py  Sig_Gen.py  Sig_Gen_Noise.py  bladerf.py  controller_data.pkl  data_dict.pkl  first_prototype.py  gui_gen_qpsk.py  gui_link_budget.py  gui_noise_demod_qpsk.py  gui_noisy_qpsk.py  gui_qpsk.py  integration_test.py  link_gui.py  main.py  matched_filter.py  plot_test.py  qpsk_experimentation.py  random_qpsk_bit_reader.py  rep_to_rx.pkl  rtlsdr_test.py  run_functions.py  sim_butter_filt.py  sim_link_budget.py  sim_qpsk_noisy_demod.py  sim_qpsk_noisy_read.py  test.py  testing_qpsk_mixing.py  tx_to_rep.pkl  up_down_link.py  zmq_controller.py  zmq_integration_test.py  zmq_receiver.py  zmq_repeater.py  (+1 more)
Resources/: Digi_Comm.ipynb  ReadMe
hardware/: .transmit_processing.py.swp  Detector.py  Detector_copy.py  RT_channel_correction.py  RT_receiver.py  Sig_Gen.py  \  binary_search_caf.py  channel_correction.py  config.py  rec_cont_save.py  receive_processing.py  receiver.py  receiver_copy.py  run_receiver.py  test.py  testing_auto_coorelation.py  transmit_processing.py
rtl-sdr-testing/: correlation_visualization.py  exp_plotters.py  exp_pysdr_app.py
vsgdevice/: basic_generation.py
(+199 files in other folders)
